--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,21 @@
 		"psr-4": {
 			"App\\": "app"
 		}
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^10.4",
+		"phpstan/phpstan": "^1.10",
+		"phpstan/extension-installer": "^1.3",
+		"phpstan/phpstan-strict-rules": "^1.5"
+	},
+	"config": {
+		"allow-plugins": {
+			"phpstan/extension-installer": true
+		}
+	},
+	"scripts": {
+		"dev": "start php -S localhost:3000",
+		"lint": "phpstan -cphpstan.neon --no-progress",
+		"test": "phpunit"
 	}
 }
