--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,7 +1,12 @@
 includes:
   - vendor/phpstan/phpstan/conf/bleedingEdge.neon
+  - phpstan-errors.neon
 parameters:
   level: max
   paths:
     - app
     - tests
+  excludePaths:
+    - vendor
+    - node_modules
+    - assets
