Implementado Leaf DB

--- a/.env
+++ b/.env
@@ -4,3 +4,10 @@ MYSQL_PASSWORD=
 MYSQL_DBNAME=
 MYSQL_PORT=3306
 MYSQL_CHARSET=utf8
+
+DB_CONNECTION=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
