--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,8 @@
 	"recommendations": [
 		"bmewburn.vscode-intelephense-client",
 		"rome.rome",
-		"dbaeumer.vscode-eslint"
+		"dbaeumer.vscode-eslint",
+		"sandy081.todotasks",
+		"wayou.vscode-todo-highlight"
 	]
 }
