--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
 		"mikecao/flight": "^2.0",
 		"symfony/uid": "^6.3",
 		"symfony/dotenv": "^6.3",
-		"leafs/db": "^2.1"
+		"leafs/db": "^2.1",
+		"leafs/anchor": "^1.5",
+		"leafs/form": "^2.0"
 	},
 	"autoload": {
 		"psr-4": {
