Added URL download db protection

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,7 +2,7 @@ includes:
   - vendor/phpstan/phpstan/conf/bleedingEdge.neon
   - phpstan-errors.neon
 parameters:
-  level: max
+  level: 0
   paths:
     - app
     - tests
