--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "rome": "^12.1.3",
     "stylelint": "^15.10.3",
     "stylelint-config-standard": "^34.0.0",
+    "stylus": "^0.61.0",
     "typescript": "^5.2.2"
   }
 }
