--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "devDependencies": {
     "eslint": "^8.51.0",
     "rome": "^12.1.3",
-    "stylelint": "^15.10.3",
+    "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
+    "stylelint-stylus": "^0.18.0",
     "stylus": "^0.61.0",
     "typescript": "^5.2.2"
   }
