--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
 		"phpunit/phpunit": "^10.4",
 		"phpstan/phpstan": "^1.10",
 		"phpstan/extension-installer": "^1.3",
-		"phpstan/phpstan-strict-rules": "^1.5"
+		"phpstan/phpstan-strict-rules": "^1.5",
+		"symfony/var-dumper": "^7.0"
 	},
 	"config": {
 		"allow-plugins": {
