--- a/.env
+++ b/.env
@@ -1,13 +1,6 @@
-MYSQL_HOST=localhost
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_DBNAME=
-MYSQL_PORT=3306
-MYSQL_CHARSET=utf8
-
-DB_CONNECTION=
-DB_HOST=
-DB_PORT=
-DB_DATABASE=
-DB_USERNAME=
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=dataescolar
+DB_USERNAME=root
 DB_PASSWORD=
