Añadido el comando `migrate:fresh`

--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
 		"dev": "start php -S localhost:3000",
 		"lint": "phpstan -cphpstan.neon --no-progress",
 		"lint:save": "phpstan -cphpstan.neon --no-progress --generate-baseline=phpstan-errors.neon",
-		"test": "phpunit"
+		"test": "phpunit",
+		"migrate:fresh": "php app/Commands/migrate-fresh.php"
 	}
 }
